should work now

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,12 @@ jobs:
           distribution: 'temurin'
           java-version: 17
           architecture: x64
+      - name: "Setting up Artifactory authentication"
+        uses: s4u/maven-settings-action@v2
+        with:
+          servers: '[{"id": "central", "username": "${env.ARTIFACTORY_USER}", "password": "${env.ARTIFACTORY_TOKEN}"}]'
+          githubServer: false
+
       - name: Cache Maven packages
         uses: actions/cache@v3.0.2
         with:
@@ -48,6 +54,9 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2-
       - name: Build with Maven
+        env:
+          ARTIFACTORY_USER: ${{ secrets.ARTIFACTORY_USER }}
+          ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
         run: mvn --no-transfer-progress package
 
   build:
