--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,11 +41,6 @@ jobs:
           distribution: 'temurin'
           java-version: 17
           architecture: x64
-      - name: "Setting up Artifactory authentication"
-        uses: s4u/maven-settings-action@v2
-        with:
-          servers: '[{"id": "central", "username": "${env.ARTIFACTORY_USER}", "password": "${env.ARTIFACTORY_TOKEN}"}]'
-          githubServer: false
 
       - name: Cache Maven packages
         uses: actions/cache@v3.0.2
@@ -53,8 +48,16 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2-
+          
       - name: Test Maven settings in PR
         run: mvn help:effective-settings
+        
+      - name: "Setting up Artifactory authentication"
+        uses: s4u/maven-settings-action@v2.6.0
+        with:
+          servers: '[{"id": "central", "username": "${env.ARTIFACTORY_USER}", "password": "${env.ARTIFACTORY_TOKEN}"}]'
+          githubServer: false
+          
       - name: Build with Maven
         env:
           ARTIFACTORY_USER: ${{ secrets.ARTIFACTORY_USER }}
@@ -79,12 +82,14 @@ jobs:
               path: ~/.m2
               key: ubuntu-latest-m2-${{ hashFiles('**/pom.xml') }}
               restore-keys: ubuntu-latest-m2-
-        - name: Test Maven settings
+        - name: Test Maven settings in Build
           run: mvn help:effective-settings
+
         - name: "Setting up Artifactory authentication"
-          uses: s4u/maven-settings-action@v2
+          uses: s4u/maven-settings-action@v2.6.0
           with:
             servers: '[{"id": "central", "username": "${env.ARTIFACTORY_USER}", "password": "${env.ARTIFACTORY_TOKEN}"}]'
             githubServer: false
+            
         - name: Test with Maven
           run: mvn -X verify
